--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
 
     <body>
-        <h1>jane</h1>
-        <h2><a href="https://github.com/janehub">Github</a></h2>
+        <h1>jack</h1>
+        <h2><a href="https://github.com/github">Github</a></h2>
     </body>
     </html>         
+    
